--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,33 +29,33 @@ dist.jar=${dist.dir}/BFT-Proxy.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bcpkix-jdk15on-1.56.jar=/home/joao/Downloads/bcpkix-jdk15on-1.56.jar
-file.reference.bcprov-jdk15on-1.56.jar=/home/joao/Downloads/bcprov-jdk15on-1.56.jar
-file.reference.BFT-SMaRt.jar=/home/joao/git/library/bin/BFT-SMaRt.jar
-file.reference.commons-codec-1.5.jar=/home/joao/git/library/lib/commons-codec-1.5.jar
-file.reference.commons-io-2.5.jar=/home/joao/Downloads/commons-io-2.5/commons-io-2.5.jar
-file.reference.commons-logging-1.2.jar=/home/joao/Downloads/commons-logging-1.2/commons-logging-1.2.jar
-file.reference.core-0.1.4.jar=/home/joao/git/library/lib/core-0.1.4.jar
-file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar=/home/joao/git/fabric-sdk-java/target/fabric-sdk-java-1.0-SNAPSHOT.jar
-file.reference.netty-all-4.0.36.Final.jar=/home/joao/git/library/lib/netty-all-4.0.36.Final.jar
-file.reference.protobuf-java-3.0.0.jar=/home/joao/Desktop/protobuf-3.0.0/java/core/target/protobuf-java-3.0.0.jar
-file.reference.slf4j-api-1.5.8.jar=/home/joao/git/library/lib/slf4j-api-1.5.8.jar
-file.reference.slf4j-jdk14-1.5.8.jar=/home/joao/git/library/lib/slf4j-jdk14-1.5.8.jar
+file.reference.bcpkix-jdk15on-1.56.jar=lib/bcpkix-jdk15on-1.56.jar
+file.reference.bcprov-jdk15on-1.56.jar=lib/bcprov-jdk15on-1.56.jar
+file.reference.BFT-SMaRt.jar=lib/BFT-SMaRt.jar
+file.reference.commons-codec-1.5.jar=lib/commons-codec-1.5.jar
+file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.core-0.1.4.jar=lib/core-0.1.4.jar
+file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar=lib/fabric-sdk-java-1.0-SNAPSHOT.jar
+file.reference.netty-all-4.0.36.Final.jar=lib/netty-all-4.0.36.Final.jar
+file.reference.protobuf-java-3.0.0.jar=lib/protobuf-java-3.0.0.jar
+file.reference.slf4j-api-1.5.8.jar=lib/slf4j-api-1.5.8.jar
+file.reference.slf4j-jdk14-1.5.8.jar=lib/slf4j-jdk14-1.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-codec-1.5.jar}:\
     ${file.reference.BFT-SMaRt.jar}:\
-    ${file.reference.core-0.1.4.jar}:\
-    ${file.reference.netty-all-4.0.36.Final.jar}:\
-    ${file.reference.slf4j-api-1.5.8.jar}:\
-    ${file.reference.slf4j-jdk14-1.5.8.jar}:\
-    ${file.reference.protobuf-java-3.0.0.jar}:\
-    ${file.reference.bcprov-jdk15on-1.56.jar}:\
     ${file.reference.bcpkix-jdk15on-1.56.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.bcprov-jdk15on-1.56.jar}:\
+    ${file.reference.commons-codec-1.5.jar}:\
     ${file.reference.commons-io-2.5.jar}:\
-    ${file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar}
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.core-0.1.4.jar}:\
+    ${file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar}:\
+    ${file.reference.netty-all-4.0.36.Final.jar}:\
+    ${file.reference.protobuf-java-3.0.0.jar}:\
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-jdk14-1.5.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
