--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.core-0.1.4.jar=lib/core-0.1.4.jar
 file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar=lib/fabric-sdk-java-1.0-SNAPSHOT.jar
+file.reference.juds-0.95.jar=lib/juds-0.95.jar
 file.reference.netty-all-4.0.36.Final.jar=lib/netty-all-4.0.36.Final.jar
 file.reference.protobuf-java-3.0.0.jar=lib/protobuf-java-3.0.0.jar
 file.reference.slf4j-api-1.5.8.jar=lib/slf4j-api-1.5.8.jar
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.netty-all-4.0.36.Final.jar}:\
     ${file.reference.protobuf-java-3.0.0.jar}:\
     ${file.reference.slf4j-api-1.5.8.jar}:\
-    ${file.reference.slf4j-jdk14-1.5.8.jar}
+    ${file.reference.slf4j-jdk14-1.5.8.jar}:\
+    ${file.reference.juds-0.95.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
