--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,10 @@ file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.core-0.1.4.jar=lib/core-0.1.4.jar
 file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar=lib/fabric-sdk-java-1.0-SNAPSHOT.jar
 file.reference.juds-0.95.jar=lib/juds-0.95.jar
+file.reference.jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar
+file.reference.jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar
+file.reference.jzmq-jni-3.1.1-SNAPSHOT-sources.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-sources.jar
+file.reference.jzmq-jni-3.1.1-SNAPSHOT.jar=lib/jzmq-jni-3.1.1-SNAPSHOT.jar
 file.reference.netty-all-4.0.36.Final.jar=lib/netty-all-4.0.36.Final.jar
 file.reference.protobuf-java-3.0.0.jar=lib/protobuf-java-3.0.0.jar
 file.reference.slf4j-api-1.5.8.jar=lib/slf4j-api-1.5.8.jar
@@ -57,7 +61,11 @@ javac.classpath=\
     ${file.reference.protobuf-java-3.0.0.jar}:\
     ${file.reference.slf4j-api-1.5.8.jar}:\
     ${file.reference.slf4j-jdk14-1.5.8.jar}:\
-    ${file.reference.juds-0.95.jar}
+    ${file.reference.juds-0.95.jar}:\
+    ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar}:\
+    ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar}:\
+    ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-sources.jar}:\
+    ${file.reference.jzmq-jni-3.1.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
