--- a/config/system.config
+++ b/config/system.config
@@ -1,3 +1,5 @@
+system.numnettyworkers = 4
+
 # Copyright (c) 2007-2013 Alysson Bessani, Eduardo Alchieri, Paulo Sousa, and the authors indicated in the @author tags
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -38,11 +40,11 @@ system.servers.num = 4
 system.servers.f = 1
 
 #Timeout to asking for a client request
-system.totalordermulticast.timeout = 2000
+system.totalordermulticast.timeout = 20000
 
 
 #Maximum batch size (in number of messages)
-system.totalordermulticast.maxbatchsize = 400  
+system.totalordermulticast.maxbatchsize = 400
 
 #Number of nonces (for non-determinism actions) generated
 system.totalordermulticast.nonces = 10  
@@ -62,7 +64,7 @@ system.communication.outQueueSize = 500000
 system.communication.useSignatures = 0
 
 #Set to 1 if SMaRt should use MAC's, set to 0 if otherwise
-system.communication.useMACs = 1
+system.communication.useMACs = 0
 
 #Set to 1 if SMaRt should use the standard output to display debug messages, set to 0 if otherwise
 system.debug = 0
