Updated bftsmart library

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,14 +42,12 @@ file.reference.jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-j
 file.reference.jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar
 file.reference.jzmq-jni-3.1.1-SNAPSHOT-sources.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-sources.jar
 file.reference.jzmq-jni-3.1.1-SNAPSHOT.jar=lib/jzmq-jni-3.1.1-SNAPSHOT.jar
-file.reference.netty-all-4.0.36.Final.jar=lib/netty-all-4.0.36.Final.jar
 file.reference.protobuf-java-3.0.0.jar=lib/protobuf-java-3.0.0.jar
 file.reference.slf4j-api-1.5.8.jar=lib/slf4j-api-1.5.8.jar
 file.reference.slf4j-jdk14-1.5.8.jar=lib/slf4j-jdk14-1.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.BFT-SMaRt.jar}:\
     ${file.reference.bcpkix-jdk15on-1.56.jar}:\
     ${file.reference.bcprov-jdk15on-1.56.jar}:\
     ${file.reference.commons-codec-1.5.jar}:\
@@ -57,7 +55,6 @@ javac.classpath=\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.core-0.1.4.jar}:\
     ${file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar}:\
-    ${file.reference.netty-all-4.0.36.Final.jar}:\
     ${file.reference.protobuf-java-3.0.0.jar}:\
     ${file.reference.slf4j-api-1.5.8.jar}:\
     ${file.reference.slf4j-jdk14-1.5.8.jar}:\
@@ -65,7 +62,8 @@ javac.classpath=\
     ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar}:\
     ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar}:\
     ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-sources.jar}:\
-    ${file.reference.jzmq-jni-3.1.1-SNAPSHOT.jar}
+    ${file.reference.jzmq-jni-3.1.1-SNAPSHOT.jar}:\
+    ${file.reference.BFT-SMaRt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
