Updated to latest versions of Bouncycastle and Fabric Java SDK Adapted the code be compatible to the latest Fabric Java SDK Adapted the code to still be able to correctly load PEM private keys if PEMParser doesn't find a PEMKeyPair object.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,15 @@ dist.jar=${dist.dir}/BFT-Proxy.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bcpkix-jdk15on-1.56.jar=lib/bcpkix-jdk15on-1.56.jar
-file.reference.bcprov-jdk15on-1.56.jar=lib/bcprov-jdk15on-1.56.jar
+file.reference.bcpkix-jdk15on-158.jar=lib/bcpkix-jdk15on-158.jar
+file.reference.bcprov-jdk15on-158.jar=lib/bcprov-jdk15on-158.jar
 file.reference.BFT-SMaRt.jar=lib/BFT-SMaRt.jar
 file.reference.commons-codec-1.5.jar=lib/commons-codec-1.5.jar
+file.reference.commons-compress-1.15.jar=lib/commons-compress-1.15.jar
 file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.core-0.1.4.jar=lib/core-0.1.4.jar
-file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar=lib/fabric-sdk-java-1.0-SNAPSHOT.jar
+file.reference.fabric-sdk-java-1.1.0-SNAPSHOT.jar=lib/fabric-sdk-java-1.1.0-SNAPSHOT.jar
 file.reference.juds-0.95.jar=lib/juds-0.95.jar
 file.reference.jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar
 file.reference.jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar
@@ -48,13 +49,10 @@ file.reference.slf4j-jdk14-1.5.8.jar=lib/slf4j-jdk14-1.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bcpkix-jdk15on-1.56.jar}:\
-    ${file.reference.bcprov-jdk15on-1.56.jar}:\
     ${file.reference.commons-codec-1.5.jar}:\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.core-0.1.4.jar}:\
-    ${file.reference.fabric-sdk-java-1.0-SNAPSHOT.jar}:\
     ${file.reference.protobuf-java-3.0.0.jar}:\
     ${file.reference.slf4j-api-1.5.8.jar}:\
     ${file.reference.slf4j-jdk14-1.5.8.jar}:\
@@ -63,7 +61,11 @@ javac.classpath=\
     ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar}:\
     ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-sources.jar}:\
     ${file.reference.jzmq-jni-3.1.1-SNAPSHOT.jar}:\
-    ${file.reference.BFT-SMaRt.jar}
+    ${file.reference.BFT-SMaRt.jar}:\
+    ${file.reference.fabric-sdk-java-1.1.0-SNAPSHOT.jar}:\
+    ${file.reference.commons-compress-1.15.jar}:\
+    ${file.reference.bcpkix-jdk15on-158.jar}:\
+    ${file.reference.bcprov-jdk15on-158.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
