Added support for reconfiguration of batch parameters via HLF's configuration transactions

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,7 @@ file.reference.commons-compress-1.15.jar=lib/commons-compress-1.15.jar
 file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.core-0.1.4.jar=lib/core-0.1.4.jar
-file.reference.fabric-sdk-java-1.1.0-SNAPSHOT.jar=lib/fabric-sdk-java-1.1.0-SNAPSHOT.jar
+file.reference.fabric-sdk-java-1.1.0.jar=lib/fabric-sdk-java-1.1.0.jar
 file.reference.juds-0.95.jar=lib/juds-0.95.jar
 file.reference.jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-javadoc.jar
 file.reference.jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar=lib/jzmq-jni-3.1.1-SNAPSHOT-native-amd64-Linux.jar
@@ -62,8 +62,8 @@ javac.classpath=\
     ${file.reference.jzmq-jni-3.1.1-SNAPSHOT-sources.jar}:\
     ${file.reference.jzmq-jni-3.1.1-SNAPSHOT.jar}:\
     ${file.reference.BFT-SMaRt.jar}:\
-    ${file.reference.fabric-sdk-java-1.1.0-SNAPSHOT.jar}:\
     ${file.reference.commons-compress-1.15.jar}:\
+    ${file.reference.fabric-sdk-java-1.1.0.jar}:\
     ${file.reference.bcpkix-jdk15on-158.jar}:\
     ${file.reference.bcprov-jdk15on-158.jar}
 # Space-separated list of extra javac options
