--- a/config/node.config
+++ b/config/node.config
@@ -1,3 +1,6 @@
+#Path to the genesis block for the system channel
+GENESIS=/home/joao/gocode/src/github.com/hyperledger/fabric/genesisblock
+
 #The ID of the membership service provider (MSP)
 MSPID=DEFAULT
 
@@ -7,7 +10,7 @@ CERTIFICATE=/home/joao/gocode/src/github.com/hyperledger/fabric/sampleconfig/msp
 #Private key of the node, compliant to Fabric's MSP guidelines
 PRIVKEY=/home/joao/gocode/src/github.com/hyperledger/fabric/sampleconfig/msp/keystore/key.pem
 
-#Number of signer/sending threads in the pool
+#Number of block generation threads in the pool
 PARELLELISM=10
 
 #Maximum number of blocks to submit to each signer/sending thread
@@ -16,3 +19,12 @@ BLOCKS_PER_THREAD=10000
 #IDs of the frontends present in the system, separate by commas
 RECEIVERS=1000,2000
 
+#Enable/disable envelope validation. Configuration envelopes are always verified regardless of this parameter
+ENV_VALIDATION=true
+
+#Enable/disable second block signature. Useful for benchmarking, but it must be enabled on production deployments, so that it abides to Fabric's implementation
+BOTH_SIGS=true
+
+#The acceptable difference between the state machine's time and the client's time. Only used if envelope validation is active
+#or in the case of a reconfiguration envelope
+TIME_WINDOW=15m
