Configuration files are now adapted for docker environment Updated BFT-SMaRt to the latest jar available at the repository Minor tweeks to the script that generates docker images

--- a/config/node.config
+++ b/config/node.config
@@ -1,14 +1,14 @@
 #Path to the genesis block for the system channel
-GENESIS=/home/joao/gocode/src/github.com/hyperledger/fabric/genesisblock
+GENESIS=/etc/bftsmart-orderer/config/genesisblock
 
 #The ID of the membership service provider (MSP)
 MSPID=DEFAULT
 
 #Certificate of the node, compliant to Fabric's MSP guidelines
-CERTIFICATE=/home/joao/gocode/src/github.com/hyperledger/fabric/sampleconfig/msp/signcerts/peer.pem
+CERTIFICATE=/etc/bftsmart-orderer/config/cert.pem
 
 #Private key of the node, compliant to Fabric's MSP guidelines
-PRIVKEY=/home/joao/gocode/src/github.com/hyperledger/fabric/sampleconfig/msp/keystore/key.pem
+PRIVKEY=/etc/bftsmart-orderer/config/key.pem
 
 #Number of block generation threads in the pool
 PARELLELISM=10
