--- a/config/system.config
+++ b/config/system.config
@@ -27,6 +27,10 @@ system.communication.useSenderThread = true
 #and benchmarks, but must not be used in production systems.
 system.communication.defaultkeys = true
 
+#IP address this replica should use when binding Netty's server bootstrap. If this parameter does not have a valid ip address,
+#the replica will fetch the host address on its own
+system.communication.nettybindaddress = auto
+
 ############################################
 ### Replication Algorithm Configurations ###
 ############################################
@@ -69,6 +73,10 @@ system.debug = 0
 
 #Print information about the replica when it is shutdown
 system.shutdownhook = true
+
+#Force all replicas to deliver to the application the same number of requests per batch.
+#This is not the same batch used during the ordering protocol
+system.samebatchsize = false
 
 ############################################
 ###### State Transfer Configurations #######
