--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ config/currentView
 docker_images/temp
 docker_images/orderingnode_material
 docker_images/frontend_material
+docker_images/peer_material
