Split the scripts into two scripts each, so that users can obtain the defaults independently of container creation.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ docker_images/temp
 docker_images/orderingnode_material
 docker_images/frontend_material
 docker_images/peer_material
+docker_images/cli_material
