--- a/config/hosts.config
+++ b/config/hosts.config
@@ -25,8 +25,8 @@
 # The same holds for replicas 1, 2, 3 ... N.
 
 #server id, address and port (the ids from 0 to n-1 are the service replicas) 
-0 172.17.0.2 11000
-1 172.17.0.3 11010
-2 172.17.0.4 11020
-3 172.17.0.5 11030
-7001 127.0.0.1 11100
+0 bft.node.0 11000
+1 bft.node.1 11010
+2 bft.node.2 11020
+3 bft.node.3 11030
+7001 bft.node.10 11100
