--- a/docker_images/Dockerfile-frontend
+++ b/docker_images/Dockerfile-frontend
@@ -24,10 +24,10 @@ RUN apt-get clean -y
 WORKDIR /etc/bftsmart-orderer/
 
 RUN echo "#!/bin/bash" > startFrontend.sh
-RUN echo "java -cp bin/orderingservice.jar:lib/* bft.BFTProxy \$1 \$2 \$3 &" >> startFrontend.sh
+RUN echo "java -cp bin/orderingservice.jar:lib/* bft.BFTProxy \$3 \$1 \$2 &" >> startFrontend.sh
 RUN echo "sleep 2" >> startFrontend.sh
 RUN echo "orderer start" >> startFrontend.sh
 RUN chmod +x ./startFrontend.sh
 
-ENTRYPOINT ["./startFrontend.sh"]
-CMD ["1000", "10", "9999"]
+ENTRYPOINT ["./startFrontend.sh", "10", "9999"]
+CMD [""]
