Re-arranged packages, cleaned up the code for gathering throughput, and created new config parameter for throughput.

--- a/config/node.config
+++ b/config/node.config
@@ -28,3 +28,6 @@ BOTH_SIGS=true
 #The acceptable difference between the state machine's time and the client's time. Only used if envelope validation is active
 #or in the case of a reconfiguration envelope
 TIME_WINDOW=15m
+
+#Calculate throughput measurements every THROUGHPUT_INTERVAL envelopes/blocks
+THROUGHPUT_INTERVAL=10000
