--- a/docker_images/Dockerfile-orderingnode
+++ b/docker_images/Dockerfile-orderingnode
@@ -1,4 +1,4 @@
-FROM bftsmart/fabric-common
+FROM bftsmart/fabric-common:x86_64-1.1.1
 
 ADD ./temp/sampleconfig/msp/signcerts/peer.pem /etc/bftsmart-orderer/config/cert.pem
 ADD ./temp/sampleconfig/msp/keystore/key.pem /etc/bftsmart-orderer/config/key.pem
