--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,27 +35,31 @@ file.reference.BFT-SMaRt.jar=lib/BFT-SMaRt.jar
 file.reference.commons-codec-1.5.jar=lib/commons-codec-1.5.jar
 file.reference.commons-compress-1.15.jar=lib/commons-compress-1.15.jar
 file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
-file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.core-0.1.4.jar=lib/core-0.1.4.jar
 file.reference.fabric-sdk-java-1.1.0.jar=lib/fabric-sdk-java-1.1.0.jar
+file.reference.jcl-over-slf4j-1.7.25.jar=lib/jcl-over-slf4j-1.7.25.jar
 file.reference.juds-0.95.jar=lib/juds-0.95.jar
+file.reference.logback-classic-1.2.3.jar=lib/logback-classic-1.2.3.jar
+file.reference.logback-core-1.2.3.jar=lib/logback-core-1.2.3.jar
 file.reference.protobuf-java-3.0.0.jar=lib/protobuf-java-3.0.0.jar
-file.reference.slf4j-api-1.5.8.jar=lib/slf4j-api-1.5.8.jar
+file.reference.slf4j-api-1.7.25.jar=lib/slf4j-api-1.7.25.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-codec-1.5.jar}:\
     ${file.reference.commons-io-2.5.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.core-0.1.4.jar}:\
     ${file.reference.protobuf-java-3.0.0.jar}:\
-    ${file.reference.slf4j-api-1.5.8.jar}:\
     ${file.reference.juds-0.95.jar}:\
     ${file.reference.BFT-SMaRt.jar}:\
     ${file.reference.commons-compress-1.15.jar}:\
     ${file.reference.fabric-sdk-java-1.1.0.jar}:\
     ${file.reference.bcpkix-jdk15on-158.jar}:\
-    ${file.reference.bcprov-jdk15on-158.jar}
+    ${file.reference.bcprov-jdk15on-158.jar}:\
+    ${file.reference.logback-classic-1.2.3.jar}:\
+    ${file.reference.jcl-over-slf4j-1.7.25.jar}:\
+    ${file.reference.logback-core-1.2.3.jar}:\
+    ${file.reference.slf4j-api-1.7.25.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
