Updated bftsmart's jar Cleaned up println's and printStackTrace's so that all output now goes through SLF4J Created new option at the ordering nodes to filter malformed envelopes Created loggers to print performance measurements directly to log files Over-hauled the WorkloadClient class

--- a/docker_images/Dockerfile-orderingnode
+++ b/docker_images/Dockerfile-orderingnode
@@ -8,5 +8,10 @@ RUN apt-get clean -y
 
 WORKDIR /etc/bftsmart-orderer/
 
-ENTRYPOINT ["java", "-cp", "bin/orderingservice.jar:lib/*", "bft.BFTNode"]
+RUN echo "#!/bin/bash" > startReplica.sh
+RUN echo "java -DNODE_ID=\$1 -cp bin/orderingservice.jar:lib/* bft.BFTNode \$@" >> startReplica.sh
+
+RUN chmod +x ./startReplica.sh
+
+ENTRYPOINT ["./startReplica.sh"]
 CMD [""]
