--- a/config/node.config
+++ b/config/node.config
@@ -19,6 +19,9 @@ BLOCKS_PER_THREAD=10000
 #IDs of the frontends present in the system, separate by commas
 RECEIVERS=1000,2000
 
+#Filter malformed envelopes. If this option is disabled but ENV_VALIDATION is enabled, such envelopes will eventually be discarded during validation
+FILTER_MALFORMED=true
+
 #Enable/disable envelope validation. Configuration envelopes are always verified regardless of this parameter
 ENV_VALIDATION=true
 
