--- a/docker_images/Dockerfile-frontend
+++ b/docker_images/Dockerfile-frontend
@@ -24,9 +24,10 @@ RUN apt-get clean -y
 WORKDIR /etc/bftsmart-orderer/
 
 RUN echo "#!/bin/bash" > startFrontend.sh
-RUN echo "java -cp bin/orderingservice.jar:lib/* bft.BFTProxy \$1 \$2 \$3 &" >> startFrontend.sh
+RUN echo "java -cp bin/orderingservice.jar:lib/* bft.BFTProxy \$@ &" >> startFrontend.sh
 RUN echo "sleep 2" >> startFrontend.sh
 RUN echo "orderer start" >> startFrontend.sh
+
 RUN chmod +x ./startFrontend.sh
 
 ENTRYPOINT ["./startFrontend.sh"]
