--- a/docker_images/docker-compose.yml
+++ b/docker_images/docker-compose.yml
@@ -47,3 +47,14 @@ services:
 
       context: ./
       dockerfile: Dockerfile-tools
+
+  workload:
+
+    image: bftsmart/fabric-workload:x86_64-1.1.1
+    build:
+
+      context: ./
+      dockerfile: Dockerfile-workload
+
+    depends_on:
+      - frontend
