Created FabricVMServices and tweeked the docker image files. Also create new docker image to launch FabricVMServices.

--- a/config/hosts.config
+++ b/config/hosts.config
@@ -26,7 +26,8 @@
 
 #server id, address and port (the ids from 0 to n-1 are the service replicas) 
 0 bft.node.0 11000
-1 bft.node.1 11010
-2 bft.node.2 11020
-3 bft.node.3 11030
-7001 bft.node.10 11100
+1 bft.node.1 11000
+2 bft.node.2 11000
+3 bft.node.3 11000
+4 bft.node.4 11000
+7002 bft.reconf.7002 11100
