--- a/config/node.config
+++ b/config/node.config
@@ -2,7 +2,7 @@
 GENESIS=/etc/bftsmart-orderer/config/genesisblock
 
 #The ID of the membership service provider (MSP)
-MSPID=DEFAULT
+MSPID=SampleOrg
 
 #Number of block generation threads in the pool
 PARELLELISM=10
