--- a/docker_images/Dockerfile-fabric
+++ b/docker_images/Dockerfile-fabric
@@ -23,7 +23,10 @@ RUN go version
 WORKDIR /go/src/github.com/hyperledger/
 RUN git clone https://github.com/jcs47/fabric.git
 WORKDIR /go/src/github.com/hyperledger/fabric/
+
 RUN pip install --upgrade pip
+
+RUN git checkout release-1.1
 RUN devenv/setupUbuntuOnPPC64le.sh
 
 RUN make configtxgen orderer
