--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ file.reference.commons-codec-1.5.jar=lib/commons-codec-1.5.jar
 file.reference.commons-compress-1.15.jar=lib/commons-compress-1.15.jar
 file.reference.commons-io-2.5.jar=lib/commons-io-2.5.jar
 file.reference.core-0.1.4.jar=lib/core-0.1.4.jar
-file.reference.fabric-sdk-java-1.1.0.jar=lib/fabric-sdk-java-1.1.0.jar
+file.reference.fabric-sdk-java-1.2.1-SNAPSHOT.jar=lib/fabric-sdk-java-1.2.1-SNAPSHOT.jar
 file.reference.jcl-over-slf4j-1.7.25.jar=lib/jcl-over-slf4j-1.7.25.jar
 file.reference.juds-0.95.jar=lib/juds-0.95.jar
 file.reference.logback-classic-1.2.3.jar=lib/logback-classic-1.2.3.jar
@@ -53,13 +53,13 @@ javac.classpath=\
     ${file.reference.juds-0.95.jar}:\
     ${file.reference.commons-compress-1.15.jar}:\
     ${file.reference.BFT-SMaRt.jar}:\
-    ${file.reference.fabric-sdk-java-1.1.0.jar}:\
     ${file.reference.logback-classic-1.2.3.jar}:\
     ${file.reference.bcpkix-jdk15on-160.jar}:\
     ${file.reference.bcprov-jdk15on-160.jar}:\
     ${file.reference.jcl-over-slf4j-1.7.25.jar}:\
     ${file.reference.logback-core-1.2.3.jar}:\
-    ${file.reference.slf4j-api-1.7.25.jar}
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.fabric-sdk-java-1.2.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
