--- a/docker_images/Dockerfile-tools
+++ b/docker_images/Dockerfile-tools
@@ -1,4 +1,4 @@
-FROM hyperledger/fabric-tools:x86_64-1.1.1
+FROM hyperledger/fabric-tools:amd64-1.2.0
 
 RUN apt-get update
 RUN apt-get install -y nano jq
